[package]
name = "embedded-ads111x"
version = "0.1.0"
edition = "2021"
authors = ["Maciej Skrzypek <maciek.skrzypek [at] gmail.com"]
license = "MIT OR Apache-2.0"
description = "ADS111x 16bit ADCs I2C rust driver no_std"
repository = "https://github.com/wintermute101/ads111x.git"
categories = ["embedded", "no-std"]
keywords = ["ADC", "embedded", "I2C", "driver"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
