[package]
name = "ads111x_driver"
version = "0.1.0"
edition = "2021"
authors = [
    "Tammo Ronke <ronke.tammo@gmail.com",
    "Maciej Skrzypek <maciek.skrzypek@gmail.com",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/grievouz/rust-embedded-drivers.git"
readme = "./README.md"

[dependencies]
bitflags = "2.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.4"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
embedded_driver_derive = { path = "../embedded_driver_derive" }

[features]
default = []
async = ["dep:embedded-hal-async"]
